@@ -26,7 +26,7 @@
 .\" OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN
 .\" IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 .\"
-.Dd May 29, 2011
+.Dd January 13, 2011
 .Dt ATF-TEST-CASE 4
 .Os
 .Sh NAME
@@ -210,6 +210,17 @@ Optional.
 .Pp
 A whitespace separated list of machine types that the test case can be run
 under without causing errors due to a machine type mismatch.
+.It require.memory
+Type: integer.
+Optional.
+Specifies the minimum amount of physical memory needed by the test.
+The value can have a size suffix such as
+.Sq K ,
+.Sq M ,
+.Sq G
+or
+.Sq T
+to make the amount of bytes easier to type and read.
 .It require.progs
 Type: textual.
 Optional.
