@@ -31,6 +31,9 @@ STILL UNDER DEVELOPMENT; NOT RELEASED YET!
 
 * Added timing support to atf-run / atf-report.
 
+* Added support for a 'require.memory' property, to specify the minimum
+  amount of physical memory needed by the test case to yield valid results.
+
 
 Changes in version 0.14
 ***********************
